mobile layout bugs fixed

--- a/frontend/src/app/components/pages/cart-page/cart-page.component.css
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.css
@@ -1,6 +1,6 @@
 .wrapper { 
-  height: 100%;
-  width: 80%;
+  height: 80%;
+  width: 100%;
   margin: 3rem auto;
   padding-bottom: 40px;
   display: flex;
@@ -12,11 +12,10 @@
 }
 
 .container{
+  width: 100%;
   padding: 2rem;
   display: flex;
   flex-direction: column;
-  background-color: var(--light-color);
-  box-shadow: 0 2px 4px var(--shadow-color); 
   border-radius: 0.5rem;
 }
 
@@ -30,6 +29,7 @@ app-title {
   flex-direction: row;
   align-items: flex-start;
   width: 100%;
+  min-width: 450px;
   margin: 0.5rem auto;
   border: none;
   background-color: transparent;
@@ -53,7 +53,6 @@ ul{
   border-radius: 1rem;
   list-style: none;
   margin: 0.5rem;
-  padding: 0;
   max-width: 800px;
   background-color: var(--transparent-strong);
 }
@@ -81,7 +80,8 @@ li img{
 }
 
 li div{
-  padding: 0rem;
+  display: flex;
+  justify-content: center;
 }
 
 li div img {
@@ -103,7 +103,6 @@ li select{
   border-bottom: 1px solid var(--light-color);
   font-size: 1.1rem;
   font-weight: 100;
-  
 }
 
 li .remove-button{
@@ -131,10 +130,11 @@ li .remove-button:hover{
   justify-content: space-between;
   align-items: center;
   flex:1 3;
-  height: 20rem;
   border: 1px solid var(--light-color);
   border-radius: 1rem;
+  height: 20rem;
   width: 30rem;
+  min-width: 200px;
   padding: 0.5rem;
   margin: 0.5rem;
   background-color: var(--transparent-strong);
@@ -170,12 +170,21 @@ li .remove-button:hover{
   padding: 1rem;
   color: var(--toggle-color);
   background: var(--primary-color);
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  font-size: 1.2rem;
   width: 99%;
   border-radius: 1rem;
   text-align: center;
   opacity: 0.8;
   justify-self: center;
+}
+
+.checkout a span {
+  display: flex;
+  align-items: center;
 }
 
 .checkout a:hover{
@@ -184,26 +193,58 @@ li .remove-button:hover{
 }
 
 
+@media screen and (max-width: 1124px) {
+  .wrapper {
+    width: 100%;
+    overflow: auto;
+  }
+
+  
+}
 @media screen and (max-width: 990px) {
   .wrapper {
     width: 100%;
   }
+
   .card {
     width: 100%;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
   }
 
   ul{
-    width: 100%;
+    padding: 0;
   }
 
-  
   .checkout  {
     width: 300px;
   }
+
+
+  .checkout a span {
+    line-height: 50%;
+  }
   
 }
+
+@media screen and (max-width: 760px) {
+  .wrapper {
+    width: 100%;
+  }
+
+  .container {
+    padding: 1rem;
+    background-color: transparent;
+    box-shadow: none;
+  }
+
+  .card {
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
 
 @media screen and (max-width: 440px) {
   .wrapper {
@@ -215,7 +256,6 @@ li .remove-button:hover{
   }
 
   ul li {
-    flex-direction: column;
     gap: 1rem;
   }
 }
