--- a/frontend/src/app/components/pages/product-page/product-page.component.css
+++ b/frontend/src/app/components/pages/product-page/product-page.component.css
@@ -1,6 +1,6 @@
 .container{
   height: 100%;
-  padding-bottom: 40px;
+  padding: 40px 0 40px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,7 +22,7 @@
 
 .box > *{
   min-width: 20rem;
-  max-width: 40rem;
+  max-width: 30rem;
 }
 
 img{
@@ -162,4 +162,18 @@ button > span {
   display: flex;
   align-items: center;
   margin-right: 0.5rem;
+}
+
+@media screen and (max-width: 900px) {
+  img {
+    height: fit-content;
+  }
+
+
+  .box > *{
+    min-width: 10rem;
+    max-width: 20rem;
+  }
+
+
 }
