--- a/frontend/src/app/components/partials/sidebar-toggle/sidebar-toggle.component.css
+++ b/frontend/src/app/components/partials/sidebar-toggle/sidebar-toggle.component.css
@@ -5,5 +5,4 @@
 
 .menu-icon:hover {
     cursor: pointer;
-    color: var(--toggle-color);
 }
